--- a/style.css
+++ b/style.css
@@ -20,3 +20,10 @@ ul {
   width: 100%;
   height: 100%;
 }
+
+.info {
+  background-color: white;
+  padding: 5px 10px 5px 10px;
+  box-shadow: 0 1px 5px rgba(0,0,0,0.4);
+  border-radius: 5px;
+}
